--- a/packages/frontend/navi/src/field/demos/2_input_search_demo.html
+++ b/packages/frontend/navi/src/field/demos/2_input_search_demo.html
@@ -196,7 +196,12 @@
                 <fieldset>
                   <legend>Loading state</legend>
                   <Box row spacing="sm" alignX="start">
-                    <Input type="search" loading value="test" />
+                    <Input
+                      type="search"
+                      loading
+                      value="test"
+                      action={() => {}}
+                    />
                   </Box>
                 </fieldset>
               </Box>
